<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.add_story.AddStoryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_title_add_story"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/poppins"
            android:text="@string/add_story"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_banner"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_add_story">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_banner"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/banner_description_add_story"
                    android:scaleType="centerCrop"
                    android:src="@drawable/creative_thinking_bro"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/app_title"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/iv_banner"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_banner_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/banner_add_story_description"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/tv_app_name"
                    app:layout_constraintTop_toBottomOf="@+id/tv_app_name"
                    app:layout_constraintVertical_bias="0.02" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_banner">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/text_pick_or_take_photo"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/galery"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    app:icon="@drawable/image_square_svgrepo_com"
                    app:iconTint="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btn_camera_x"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <Button
                    android:id="@+id/btn_camera_x"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/camera"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    app:icon="@drawable/camera_svgrepo_com"
                    app:iconTint="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btn_gallery"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/preview_image"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/preview_image_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:srcCompat="@drawable/ic_place_holder" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="80dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/preview_image">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_title_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/start_your_story_now"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/tv_title_description"
                    app:layout_constraintStart_toStartOf="@+id/tv_title_description"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title_description">


                    <EditText
                        android:id="@+id/ed_add_description"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:fontFamily="@font/poppins"
                        android:gravity="start|top"
                        android:hint="@string/type_here"
                        android:inputType="textMultiLine"
                        android:scrollbars="vertical"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/tv_title_description"
                        app:layout_constraintStart_toStartOf="@+id/tv_title_description"
                        app:layout_constraintTop_toBottomOf="@+id/tv_title_description" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.example.storyappjuzairi.view.custom.ButtonAddStory
                    android:id="@+id/button_add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="16dp"
                    android:elevation="0dp"
                    android:enabled="false"
                    android:fontFamily="@font/poppins"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
                    app:layout_constraintStart_toStartOf="@+id/textInputLayout"
                    app:layout_constraintTop_toBottomOf="@+id/switch_location" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/switch_text_location"
                    app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
                    app:layout_constraintStart_toStartOf="@+id/textInputLayout"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                    app:thumbTint="@color/gray"
                    app:trackTint="@color/cream_brown" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


        <View
            android:id="@+id/overlay"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/overlayColor"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>