<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_svgrepo_com"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_add_story"
        android:icon="@drawable/circle_plus_svgrepo_com"
        android:title="@string/title_story" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/user_alt_1_svgrepo_com"
        android:title="@string/title_profile" />

</menu>